# drawio

src/main/webapp/: index.html
src/main/webapp/js/: shapes-14-6-5.min.js  viewer-static.min.js  viewer.min.js
src/main/webapp/js/diagramly/: App.js
src/main/webapp/plugins/dflow/: dflow.js
src/main/webapp/plugins/dflow/lib/: .gitignore  Cargo.toml  readme.md
src/main/webapp/plugins/dflow/lib/src/: dflow_object.rs  errors.rs  lib.rs  utils.rs
src/main/webapp/plugins/dflow/lib/src/cell_app/: mod.rs
src/main/webapp/plugins/dflow/lib/src/components/: cell_details.rs  data_source.rs  geom_value.rs  label_value.rs  mod.rs  prop_table_tr.rs  shared.rs
src/main/webapp/plugins/dflow/lib/src/components/diagram/: info.rs  info_item.rs  list_item.rs  mod.rs
src/main/webapp/plugins/dflow/lib/src/components/multystate/: mod.rs  state.rs  state_predef.rs  state_rect.rs  states.rs
src/main/webapp/plugins/dflow/lib/src/components/widget/: container_edit.rs  container_view.rs  glyph.rs  glyph_svg.rs  info.rs  info_item.rs  list_item.rs  mod.rs  svg_view.rs
src/main/webapp/plugins/dflow/lib/src/model/: common.rs  mod.rs  mx_cell.rs  mx_editor.rs  mx_graph.rs  mx_graph_model.rs  mx_rectangle.rs
src/main/webapp/plugins/dflow/lib/src/model/cell_meta/: data_source_reducers.rs  form.rs  mod.rs  value_reducers.rs
src/main/webapp/plugins/dflow/lib/src/model/diagram/: form.rs  mod.rs
src/main/webapp/plugins/dflow/lib/src/model/widget/: form.rs  form_meta.rs  mod.rs
src/main/webapp/plugins/dflow/lib/src/open_dialog_app/: mod.rs
src/main/webapp/plugins/dflow/lib/src/schema_app/: mod.rs
src/main/webapp/plugins/dflow/lib/src/store/: cell.rs  diagram.rs  mod.rs  mx_context.rs
src/main/webapp/plugins/dflow/lib/tests/: wasm.rs
src/main/webapp/plugins/scada/: scada.js
src/main/webapp/plugins/scada/css/: styles.css
src/main/webapp/plugins/scada/lib/: .gitignore  Cargo.toml  readme.md
src/main/webapp/plugins/scada/lib/src/: errors.rs  lib.rs  scada_object.rs  schema_app.rs  utils.rs
src/main/webapp/plugins/scada/lib/src/app/: mod.rs
src/main/webapp/plugins/scada/lib/src/cell_app/: mod.rs  mx_cell.rs
src/main/webapp/plugins/scada/lib/src/components/: cell_details.rs  data_source.rs  free_value.rs  geom_value.rs  info_item.rs  label_value.rs  list_item.rs  mod.rs  multystate.rs  multystate_data_source.rs  multystate_state.rs  prop_table_tr.rs  shared.rs  undefiend.rs  value.rs
src/main/webapp/plugins/scada/lib/src/components/diagram/: info_item.rs  list_item.rs
src/main/webapp/plugins/scada/lib/src/components/multystate/: data_source.rs  mod.rs  multystate_value.rs  state.rs  state_edit.rs  state_predef.rs  state_rect.rs  states.rs
src/main/webapp/plugins/scada/lib/src/components/widget/: data_source.rs  glyph.rs  glyph_svg.rs  info_item.rs  list_item.rs  mod.rs  svg_view.rs
src/main/webapp/plugins/scada/lib/src/model/: common.rs  editor_ui.rs  mod.rs  mx_cell.rs  mx_editor.rs  mx_graph.rs  mx_utils.rs  scada_diagram.rs  widget_group.rs
src/main/webapp/plugins/scada/lib/src/model/cell_meta/: data_source.rs  data_source_reducers.rs  mod.rs  multystate.rs  multystate_data_source.rs  multystate_state.rs  undefiend.rs  value.rs  value_reducers.rs  widget.rs  widget_reducers.rs
src/main/webapp/plugins/scada/lib/src/model/cell_meta/multystate/: data_source.rs  mod.rs  state.rs  state_bad.rs  state_default.rs  state_predef.rs  state_range.rs
src/main/webapp/plugins/scada/lib/src/model/cell_meta/widget/: data_source.rs  mod.rs
src/main/webapp/plugins/scada/lib/src/model/diagram/: meta.rs  mod.rs
src/main/webapp/plugins/scada/lib/src/model/scada_diagram/: info_item.rs  list_item.rs  meta.rs  mod.rs
src/main/webapp/plugins/scada/lib/src/model/widget/: meta.rs  mod.rs
src/main/webapp/plugins/scada/lib/src/mx_graph/: mod.rs  mx_cell.rs  mx_cell_highlight.rs  mx_cell_state.rs  mx_editor.rs
src/main/webapp/plugins/scada/lib/src/open_dialog_app/: mod.rs
src/main/webapp/plugins/scada/lib/src/schema_app/: js_functions.rs  mod.rs  mx_cell.rs  mx_editor.rs  mx_graph.rs  mx_graph_model.rs  mx_utils.rs
src/main/webapp/plugins/scada/lib/src/store/: cell.rs  diagram.rs  mod.rs
src/main/webapp/plugins/scada/lib/tests/: wasm.rs
