[package]
name = "scada-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlDivElement"] }
reqwasm = { version = "0.5.0"}
yew = { version="0.21.0", features=["csr"] }
yewdux = "0.10.0"
yew-hooks = "0.3.2"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
wasm-bindgen = {version = "0.2.93", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.127"
serde-xml-rs = "0.6.0"
# yew-autoprops = "0.4.1"
# futures = "0.3.30"
# material-yew = { version = "0.3.0", features = ["button","tabs", "dialog", "checkbox"]}
# js-sys = "0.3.19"
# gloo-timers = { version = "0.3.0", features = ["futures"] }
# html_parser = "0.7.0"

[dev-dependencies]
mockall = "0.13.0"
wasm-bindgen-test = "0.3"
