[package]
name = "scada-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
console_error_panic_hook = "0.1.7"
# anyhow = "1.0.88"
thiserror = "1.0"
log = "0.4"
reqwasm = { version = "0.5.0"}
yew = { version="0.21.0", features=["csr"] }
yewdux = "0.10.0"
yew-hooks = "0.3.2"
# material-yew = {version = "0.3.0", features = ["icon", "icon-button", "icon-button-toggle", "button", "checkbox"]}
implicit-clone = {version = "0.5.0", features = ["map", "serde"]}
wasm-logger = "0.2.0"
web-sys = { version = "0.3.70", features = ["Document", "Window", "Element", "Node", "HtmlDivElement", "HtmlFormElement", "HtmlAnchorElement", "SvgElement"] }
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.128"
# serde-xml-rs = "0.6.0"
quick-xml = {version = "0.36.1", features = ["serialize"]}
stylist = {version = "0.13.0", features = ["yew"]}
# yew-autoprops = "0.4.1"
# futures = "0.3.30"
# material-yew = { version = "0.3.0", features = ["button","tabs", "dialog", "checkbox"]}
# js-sys = "0.3.19"
# gloo-timers = { version = "0.3.0", features = ["futures"] }
# html_parser = "0.7.0"

[dev-dependencies]
mockall = "0.13.0"
wasm-bindgen-test = "0.3.43"
