[package]
name = "scada-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
common-model = { path = "/home/janshim/projects/rust/scada_editor/common_model" }
console_error_panic_hook = "0.1.7"
# anyhow = "1.0.88"
thiserror = "2.0.1"
log = "0.4"
reqwasm = { version = "0.5.0"}
yew = { version="0.21.0", features=["csr"] }
yewdux = {version = "0.10.0", features = ["doctests"]}
yew-hooks = "0.3.2"
# material-yew = {version = "0.3.0", features = ["icon", "icon-button", "icon-button-toggle", "button", "checkbox"]}
implicit-clone = {version = "0.4.9", features = ["map", "serde"]}       #!!!!!! this version in yew
wasm-logger = "0.2.0"
web-sys = { version = "0.3.72", features = ["Document", "Window", "Element", "Node", 
"HtmlDivElement", "HtmlFormElement", "HtmlAnchorElement", "SvgElement", "HtmlSelectElement"] }
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.45"
serde = { version = "1.0.214", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.132"
quick-xml = {version = "0.37.0", features = ["serialize"]}
stylist = {version = "0.13.0", features = ["yew"]}
# lazy_static = "1.5.0"
# yew_form = "0.1.7"
# yew_form_derive = "0.1.7"
# validator = {version = "0.18.1", features = ["derive"]}
# syn = {version = "2.0.79", features = ["full"]}
# validator_derive = "0.18.2"
# yew-autoprops = "0.4.1"
# futures = "0.3.30"
# material-yew = { version = "0.3.0", features = ["button","tabs", "dialog", "checkbox"]}
# js-sys = "0.3.19"
# gloo-timers = { version = "0.3.0", features = ["futures"] }
# html_parser = "0.7.0"

[dev-dependencies]
mockall = "0.13.0"
wasm-bindgen-test = "0.3.45"
